# dockerizer-agent

./: README.md  pyproject.toml
agent_deployer/: __init__.py  agent.py  analyzer.py  builder.py  cli.py  tools.py
sample_frontend/: index.html  package.json  server.js
sample_frontend/src/: App.jsx  index.css
sample_project/: package.json  server.js
sample_project/public/: index.html
